@@ -1,6 +1,6 @@
 {
     "name": "alak",
-    "version": "5.0.0-up.18",
+    "version": "5.0.0-up.19",
     "description": "Alak Last Atom",
     "main": "index.js",
     "types": "index.d.ts",
