@@ -1,4 +1,11 @@
 
+With means more blessed than my barren rhyme?    // Wed Aug 23 2023 09:07:38
+	alak@5.0.0-up.19
+		 - src/namespaces.ts
+		 - types/Unions.d.ts
+	scripts/index.ts
+
+
 Of his self-love, to stop posterity?    // Wed Aug 23 2023 07:29:47
 	scripts/index.ts
 
